--- a/css/character1.css
+++ b/css/character1.css
@@ -212,7 +212,7 @@ body {
 }
 
 /* 響應式 */
-@media (max-width: 900px){
+@media (max-width: 480px){
   .container{
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
@@ -221,12 +221,17 @@ body {
   }
   .right{ order:3; }
   .center{ order:2; }
-  .left{ order:1; }
+  .left{ order:1;}  
   .portrait-wrap{
     width: min(60vw, 420px);
+    margin-top: 70px; 
+  }
+  .circle-actions{
+    flex-direction:row;
+    justify-content:center;
+    gap: 20px;
   }
 }
-
 @media (prefers-reduced-motion: reduce){
   .portrait-wrap img{ transition:none; }
   .change-btn{ transition:none; }
