--- a/css/author.css
+++ b/css/author.css
@@ -157,6 +157,16 @@ body {
   border-radius: 10px;
 }
 
+.work-link {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.work-link:hover .work-circle {
+  transform: scale(1.05);
+  transition: 0.3s;
+}
+
 /* 響應式調整：手機版上下排列 */
 @media (max-width: 480px) {
   .wrapper {
